<resources>
    <string name="app_name">My First Kotlin App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="random_button_text">Random</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">0</string>
    <string name="random_heading">Here is a random number between 0 and Args: %d.</string>
    <string name="toast_button_text">Toast</string>
    <string name="count_button_text">Count</string>
    <string name="placeholder_string">R</string>
    <string name="etukudo_emmanuel_enobong">Etukudo Emmanuel Enobong</string>
    <string name="slack_username">Slack Username: etukz</string>
    <string name="mail">etukzbong@gmail.com</string>
    <string name="tracks">Design And Mobile Tracks</string>
</resources>
